--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-Hello World
-- linkedin: https://www.linkedin.com/in/zachary-bauer-480a47204/
-- Github: https://github.com/zcbauer
+<!DOCTYPE html>
+<html>
+	<h1> Links </h1>
+	<p> <a href= "https://www.linkedin.com/in/zachary-bauer-480a47204/">Linkedin</a> </p>
+	<p> <a href= "https://github.com/zcbauer">Github</a> </p>
+
+<html>
 
