added profile pic and bio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<h1> Links </h1>
+	<body style="background-color:powderblue;">
+	<h1> Zachary Bauer</h1>
+	<img src="Pic.jpg" sytle="width:200px; height:200px">
+	<p> Hello, I am an Electrical & Computer Engineering student at the University of Michigan specializing in Embedded Systems </p>
+	<h2> Links: </h2>
 	<p> <a href= "https://www.linkedin.com/in/zachary-bauer-480a47204/">Linkedin</a> </p>
 	<p> <a href= "https://github.com/zcbauer">Github</a> </p>
 
