expanded project section

--- a/index.html
+++ b/index.html
@@ -63,12 +63,68 @@
         <h2>About Me</h2>
         <img src="Pic.jpg" alt="My Photo">
         <p>Hello! I'm Zachary Bauer, a first year ECE Master's at the University of Michigan specializing in Embedded systems. I completed a Bachelor's in Computer Engineering also from the University of Michigan in May 2024. Welcome to my personal website!</p>
+    </section>
     <section id="projects">
         <h2>My Projects</h2>
         <ul>
-            <li>Project 1: Description of project 1.</li>
-            <li>Project 2: Description of project 2.</li>
-            <li>Project 3: Description of project 3.</li>
+            <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        .project {
+            margin-bottom: 20px;
+        }
+        .project-header {
+            display: flex;
+            justify-content: space-between;
+            font-weight: bold;
+        }
+        .project-description {
+            margin-top: 5px;
+        }
+    </style>
+</head>
+
+    <div class="project">
+        <div class="project-header">
+            <span>Smart Scoreboard</span>
+            <span>September - December 2023</span>
+        </div>
+        <div class="project-description">
+            Second Senior Capstone project. Done for my Advanced Embedded Systems course. I designed and assembled a PCB for a wearable application. Additionally, I created a protocol for sending commands to the scoreboard wirelessly. I also created a menu system for the control touchscreen.
+        </div>
+    </div>
+
+    <div class="project">
+        <div class="project-header">
+            <span>BMS System Testing Apparatus</span>
+            <span>May - July 2023</span>
+        </div>
+        <div class="project-description">
+            Completed while I was an intern for the Ford Motor Company. I designed and built a system to test the BMS for Ford vehicles. While working on the project, I cultivated knowledge in analog signal processing.
+        </div>
+    </div>
+
+    <div class="project">
+        <div class="project-header">
+            <span>Skin Touch Tracking Device</span>
+            <span>February - April 2023</span>
+        </div>
+        <div class="project-description">
+            Senior Capstone project. Done for my Human-Computer Interaction course. The device I helped design was able to detect and localize a person's finger when they touched their arm. An oscillator that I built created a 60 MHz electrical signal that was transmitted through the skin.
+        </div>
+    </div>
+
+</html>
+
         </ul>
     </section>
     <section id="contact">
