Added more to scoreboard description

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         section {
             padding: 2em;
             margin: 2em auto;
-            max-width: 800px;
+            max-width: 1600px;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
@@ -62,7 +62,7 @@
     <section id="about">
         <h2>About Me</h2>
         <img src="Pic.jpg" alt="My Photo">
-        <p>Hello! I'm Zachary Bauer, a first year ECE Master's at the University of Michigan specializing in Embedded systems. I completed a Bachelor's in Computer Engineering also from the University of Michigan in May 2024. Welcome to my personal website!</p>
+        <p>Hello! I'm Zachary Bauer, a Second year ECE Master's at the University of Michigan specializing in Embedded systems. I completed a Bachelor's in Computer Engineering also from the University of Michigan in May 2024. Welcome to my personal website!</p>
     </section>
     <section id="projects">
         <h2>My Projects</h2>
@@ -99,7 +99,9 @@
             <span>September - December 2023</span>
         </div>
         <div class="project-description">
-            Second Senior Capstone project. Done for my Advanced Embedded Systems course. I designed and assembled a PCB for a wearable application. Additionally, I created a protocol for sending commands to the scoreboard wirelessly. I also created a menu system for the control touchscreen.
+            I did this as my second Senior Capstonefor EECS 473:Advanced Embedded Systems. My contributions where designing and assembling a PCBs for 2 wearable controllers. 
+            Additionally, I created a protocol for sending commands to the scoreboard wirelessly from the controllers that I built. I also created a menu system that was used for a touchscreen controller on the board itself.
+
         </div>
     </div>
 
@@ -138,7 +140,7 @@
     </section>
    
     <footer>
-        <p>&copy; 2024 Zachary Bauer. All rights reserved.</p>
+        <p>&copy; 2025 Zachary Bauer. All rights reserved.</p>
     </footer>
 </body>
 </html>
