trying to fix work projects 404ing

--- a/Class_Proj/Smart_Scoreboard.html
+++ b/Class_Proj/Smart_Scoreboard.html
@@ -75,7 +75,9 @@
 		<section id="My Contributions">
 			<h2>My contributions</h2>
 			<p>
-				
+				My Primary contribution was designing, ordering, and manufacturing the PCB for our wireless controllers. Each controller needed to fit within a small footprint
+				and run for long periods of time
+
 			</p>
 		</section>
 	</body>
