--- a/index3.html
+++ b/index3.html
@@ -65,9 +65,9 @@
 		<nav>
 			<a href="index.html">Home</a>
 			<a href="about.html">About</a>
-			<a href="research_proj.html">Research Projects</a>
 			<a href="#class projects">Class Projects</a>
 			<a href="#work projects">Work Experience</a>
+			<a href="#research projects">Reserach Projects</a>
 		</nav>
 
 		<section id="class projects">
@@ -189,6 +189,64 @@
 						<span><a href="./Work_Proj/FibarTower.html"> Fibarcode fiber draw
 								tower</a></span>
 						<span>May - August 2025</span>
+					</div>
+				</div>
+
+				</html>
+			</ul>
+		</section>
+		<section id="research projects">
+			<h2>Research Experience</h2>
+			<ul>
+				<!doctype html>
+				<html lang="en">
+
+				<head>
+					<meta charset="utf-8">
+					<meta name="viewport" content="width=device-width, initial-scale=1.0">
+					<title>projects</title>
+					<style>
+						body {
+							font-family: arial, sans-serif;
+							line-height: 1.6;
+							margin: 20px;
+						}
+
+						.project {
+							margin-bottom: 20px;
+						}
+
+						.project-header {
+							display: flex;
+							justify-content: space-between;
+							font-weight: bold;
+						}
+
+						.project-description {
+							margin-top: 5px;
+						}
+					</style>
+				</head>
+				<div class="project">
+					<div class="project-header">
+						<span><a href="./Research_Proj/Laser.html"> Fiber Laser Cut
+								PCBs</a></span>
+						<span>May - August 2024</span>
+					</div>
+
+				</div>
+				<div class="project">
+					<div class="project-header">
+						<span><a href="./Research_Proj/Mic.html"> Spiral Microphone Array
+								Design</a></span>
+						<span>August 2024 - Present</span>
+					</div>
+				</div>
+				<div class="project">
+					<div class="project-header">
+						<span><a href="./Research_Proj/Phone.html"> Phone case data
+								collection</a></span>
+						<span>June 2025 - Present</span>
 					</div>
 				</div>
 
