--- a/research_proj.html
+++ b/research_proj.html
@@ -3,10 +3,10 @@
 
 <head>
 
-<body style="background-color:powderblue;">
+<body style="background-color:snow;">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fibarcode Fiber Draw Tower</title>
+	<title>Spiral Microphone Array Design </title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
@@ -60,27 +60,22 @@
 
 	<body>
 		<header>
-			<h1>Fibarcode Fiber Draw Tower</h1>
+			<h1>Research Projects</h1>
 		</header>
 		<nav>
-			<a href="../index.html#work projects">Back</a>
+			<a href="index.html">Back</a>
 		</nav>
-		<section id="Background">
-			<h2>Background</h2>
-			<p> This work was done in collaboration with the Shtein lab at the University of Michigan, and a
-				startup Fibarcode.
-				My task was to assit in the creation of a Fiber draw tower which could be used to test
-				different combinations of materials
-				in how they could be drawn into strands.</p>
-			<p> My work was primarily foccused on two areas.
-				<li>
-					The creation of a mechanism to feed the material into a furnace
-				</li>
-				<li>
-					A mechanism to draw fiber out of the furnace and spool it for storage
-				</li>
-			</p>
+		<section id="Laser">
+			<h2><a href="./Research_Proj/Laser.html">Laser Cut PCBs</a></h2>
+
 		</section>
+		<section id="Mic">
+			<h2><a href="./Research_Proj/Mic.html">Spiral Microphone Array Design</a></h2>
+		</section>
+		<section id="Phone">
+			<h2><a href="./Research_Proj/Phone.html">Phone case data collection</a></h2>
+		</section>
+
 
 	</body>
 
